feat: url short and expand

--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "koa-compress": "^3.0.0",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
-    "mysql2": "^1.6.5",
     "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
+    "mysql2": "^1.6.5",
+    "nanoid": "^2.1.1",
     "palin": "^2.3.0",
     "sequelize": "^5.16.0",
     "sequelize-cli": "^5.5.0",
