--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bristol": "^0.4.0",
     "dotenv": "^8.1.0",
     "esm": "^3.2.25",
+    "geoip-lite": "^1.3.8",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
